<resources>
    <string name="app_name">calculadora</string>
    <string name="operacion" />
    <string name="rsultado" />
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="coma">.</string>
    <string name="n0">0</string>
    <string name="igual">=</string>
    <string name="del">DEL</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="dividir">/</string>
    <string name="multi">*</string>
</resources>
