<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jorge.calculadora.MainActivity">

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="104dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/TxOperacion"
            android:layout_width="368dp"
            android:layout_height="50dp"
            android:text="@string/operacion"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="165dp" />

        <TextView
            android:id="@+id/TxResultado"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/rsultado" />
    </GridLayout>

    <GridLayout
        android:layout_width="280dp"
        android:layout_height="338dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726">

        <Button
            android:id="@+id/numero7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n7" />

        <Button
            android:id="@+id/numero9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/n9" />

        <Button
            android:id="@+id/numero4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/n4" />

        <Button
            android:id="@+id/numero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/n1" />

        <Button
            android:id="@+id/numero5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/n5" />

        <Button
            android:id="@+id/numero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/n2" />

        <Button
            android:id="@+id/numero6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/n6" />

        <Button
            android:id="@+id/numero3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/n3" />

        <Button
            android:id="@+id/BtComa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/coma" />

        <Button
            android:id="@+id/numero0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/n0" />

        <Button
            android:id="@+id/BtIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/igual" />

        <Button
            android:id="@+id/BtDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/del" />

        <Button
            android:id="@+id/numero8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/n8" />

        <Button
            android:id="@+id/BtMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/menos" />

        <Button
            android:id="@+id/BtMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/mas" />

        <Button
            android:id="@+id/BtDividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/dividir" />

        <Button
            android:id="@+id/BtMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:text="@string/multi" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>
